Chapter6/SalesforceEinsteinVision/src/objects/Einstein_Vision_Dataset__c.object
<CustomObject>
    <fields>
        <fullName>DatasetId__c</fullName>
        <description>Id of the Dataset</description>
        <inlineHelpText>Id of the Dataset</inlineHelpText>
        <label>DatasetId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelId__c</fullName>
        <label>ModelId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_URL__c</fullName>
        <description>This holds the zip file public url used for creating datasets and training the model</description>
        <inlineHelpText>This holds the zip file public url used for creating datasets and training the model</inlineHelpText>
        <label>Public URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This holds the status of the dataset creation</description>
        <inlineHelpText>This holds the status of the dataset creation</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAILURE</fullName>
                </value>
                <value>
                    <fullName>SUCCEEDED</fullName>
                </value>
                <value>
                    <fullName>STARTED</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <description>This shows the Status of the training</description>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RUNNING</fullName>
                </value>
                <value>
                    <fullName>SUCCEEDED</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Einstein Vision Dataset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Einstein Vision Dataset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Datasets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>